<resources>
    <string name="app_name">XO_Game</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_the_password">Confirm The Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_your_play_mode">Choose Your Play Mode</string>
    <string name="with_a_friend">With a Friend</string>
    <string name="with_ai">With AI</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_second_name">Enter Second Name</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="draw">draw</string>
    <string name="You">You</string>
    <string name="computer">Computer</string>
</resources>