<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/tic_tac_toe"
        android:textSize="30sp"
        android:fontFamily="@font/chrustyrock_orla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/x_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/x_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/o_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="116dp"
        android:src="@drawable/o_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />
    <EditText
        android:id="@+id/Name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/x_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:hint="@string/enter_your_name"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Name_register"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:hint="@string/enter_your_email"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_register"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:hint="@string/enter_your_password"
        android:layout_margin="5dp"
        android:inputType="textPassword"

        />
    <EditText
        android:id="@+id/confirm_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_register"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:hint="@string/confirm_the_password"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_register"
        android:layout_margin="15dp"
        android:backgroundTint="@color/blue"
        android:text="@string/register"
        android:fontFamily="@font/chrustyrock_orla"
        android:textSize="25sp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>